src/snapshots/transmute__parser__tests__while_loop.snap
---
source: src/parser.rs
expression: "(&ast, &diagnostics)"
---
(
    Ast {
        identifiers: [],
        identifier_refs: [],
        expressions: [
            Expression {
                id: ExprId {
                    id: 0,
                },
                kind: Literal(
                    Literal {
                        kind: Boolean(
                            true,
                        ),
                        span: 1:7; [6, 10],
                    },
                ),
                span: 1:7; [6, 10],
            },
            Expression {
                id: ExprId {
                    id: 1,
                },
                kind: Literal(
                    Literal {
                        kind: Number(
                            42,
                        ),
                        span: 1:14; [13, 15],
                    },
                ),
                span: 1:14; [13, 15],
            },
            Expression {
                id: ExprId {
                    id: 2,
                },
                kind: Block(
                    [
                        StmtId {
                            id: 0,
                        },
                    ],
                ),
                span: 1:12; [11, 18],
            },
            Expression {
                id: ExprId {
                    id: 3,
                },
                kind: While(
                    ExprId {
                        id: 0,
                    },
                    ExprId {
                        id: 2,
                    },
                ),
                span: 1:1; [0, 18],
            },
        ],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Expression(
                    ExprId {
                        id: 1,
                    },
                ),
                span: 1:14; [13, 16],
            },
            Statement {
                id: StmtId {
                    id: 1,
                },
                kind: Expression(
                    ExprId {
                        id: 3,
                    },
                ),
                span: 1:1; [0, 18],
            },
        ],
        root: [
            StmtId {
                id: 1,
            },
        ],
    },
    Diagnostics {
        diagnostics: [],
    },
)
